<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProductActivity">

    <EditText
        android:id="@+id/editTextUpdateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUpdateQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextUpdateName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextUpdateName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateName" />

    <Spinner
        android:id="@+id/updateUnitSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUpdateQuantity"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editTextUpdateQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateQuantity" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUnitSpin" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:onClick="increment"
        android:text="+"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUpdateQuantity"
        app:layout_constraintStart_toEndOf="@+id/editTextUpdateQuantity"
        app:layout_constraintTop_toTopOf="@+id/editTextUpdateQuantity"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:onClick="decrement"
        android:text="-"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUpdateQuantity"
        app:layout_constraintEnd_toStartOf="@+id/editTextUpdateQuantity"
        app:layout_constraintTop_toTopOf="@+id/editTextUpdateQuantity" />


</androidx.constraintlayout.widget.ConstraintLayout>