<resources>
    <string name="app_name">HW4 Shopping List</string>
    <string name="add_product">Add Product</string>
    <string name="hint_product">Product Name...</string>
    <string name="button_save">Save</string>
    <string name="Toast_message">Product already exists</string>

    <string-array name="labels_unit">
        <item>Unit</item>
        <item>Kg</item>
        <item>Liter</item>
    </string-array>
    <string name="button_create">Create</string>
    <string name="hint_name">Shopping list name</string>
</resources>